--- a/socketUDPClient/socketUDPClient.csproj
+++ b/socketUDPClient/socketUDPClient.csproj
@@ -72,6 +72,8 @@
     <Compile Include="ListViewEx.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="LoginBLL.cs" />
+    <Compile Include="LoginDal.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
