--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ByteHelper.cs" />
     <Compile Include="DbHelper.cs" />
     <Compile Include="UdpOp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
