--- a/socketUDPClient/socketUDPClient.csproj
+++ b/socketUDPClient/socketUDPClient.csproj
@@ -63,6 +63,12 @@
     <Compile Include="FrmClient.Designer.cs">
       <DependentUpon>FrmClient.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmClientTcp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmClientTcp.Designer.cs">
+      <DependentUpon>FrmClientTcp.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmUserList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,6 +84,12 @@
     <Compile Include="TestFrm.Designer.cs">
       <DependentUpon>TestFrm.cs</DependentUpon>
     </Compile>
+    <Compile Include="TestFrmUersList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TestFrmUersList.Designer.cs">
+      <DependentUpon>TestFrmUersList.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserBLL.cs" />
     <Compile Include="UserDal.cs" />
     <Compile Include="Program.cs" />
@@ -87,6 +99,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmClient.resx">
       <DependentUpon>FrmClient.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmClientTcp.resx">
+      <DependentUpon>FrmClientTcp.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmUserList.resx">
       <DependentUpon>FrmUserList.cs</DependentUpon>
@@ -103,6 +118,9 @@
     </Compile>
     <EmbeddedResource Include="TestFrm.resx">
       <DependentUpon>TestFrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TestFrmUersList.resx">
+      <DependentUpon>TestFrmUersList.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -137,6 +155,8 @@
     <Content Include="Images\pwd.png" />
     <Content Include="Images\search.png" />
     <Content Include="Images\wenjian.png" />
+    <None Include="Resources\hz.jpg" />
+    <None Include="Resources\微信图片_20170517223918.jpg" />
     <None Include="Resources\Jellyfish.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
