--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -33,6 +33,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,6 +44,7 @@
   <ItemGroup>
     <Compile Include="ByteHelper.cs" />
     <Compile Include="DbHelper.cs" />
+    <Compile Include="ImageHelper.cs" />
     <Compile Include="UdpOp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
