--- a/socketUDPClient/App.config
+++ b/socketUDPClient/App.config
@@ -8,6 +8,6 @@
     <add key="port" value="8080" />
   </appSettings>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="server=193.112.47.91;database=userInfo;User ID=sa;Password=yz.rent123456;" />
+    <add name="DefaultConnection" connectionString="server=*;database=userInfo;User ID=sa;Password=*;" />
   </connectionStrings>
 </configuration>
